[metadata]
name = s3-cas
version = 1.0.0
author = Haggai Nuchi
author_email = haggai@haggainuchi.com
url = https://github.com/nuchi/s3-cas
description = S3 Content-Addressable Storage
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = aws, botocore, boto3, s3
license = MIT

[options]
install_requires =
    boto3 >= 1.0
    botocore >= 1.0

packages = s3_cas
setup_requires =
    setuptools >=46.4.0

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
